getComputedStyle for border is not implemented. https://bugs.webkit.org/show_bug.cgi?id=75319

Reviewed by Tony Chang.

Source/WebCore:

Implement getComputedStyle for border.

fast/css/getComputedStyle/getComputedStyle-border-shorthand.html was extented.

* css/CSSComputedStyleDeclaration.cpp:
(WebCore::CSSComputedStyleDeclaration::getPropertyCSSValue):

LayoutTests:

Extend existing test to cover that we return correct values.

* fast/css/getComputedStyle/getComputedStyle-border-shorthand-expected.txt:
* fast/css/getComputedStyle/getComputedStyle-border-shorthand.html:


Canonical link: https://commits.webkit.org/92245@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@103948 268f45cc-cd09-0410-ab3c-d52691b4dbfc